# mpi-game-of-life

./: .gitignore  CMakeLists.txt  README.md
cmake/: ValidateSerialVsMpi.cmake
demo/: index.html
include/: life.hpp  pgm.hpp
scripts/: plot_results.py  run_benchmarks.py  run_demo.py
src/: life.cpp  main_mpi.cpp  main_serial.cpp  pgm.cpp
tests/: test_life.cpp
